# XGBoost-Training-Visualizer

./: .env.example  .gitignore  CHANGELOG.md  README.md  package.json  playwright-test.js  pnpm-lock.yaml  smoke-test.mjs  start-local.bat  start-local.sh  test-playwright.js  test-playwright.mjs  turbo.json
apps/api/: Dockerfile  alembic.ini  package.json  pyproject.toml  pytest.ini  pytest_output.txt  requirements.txt  test_validation.py  tsconfig.json
apps/api/alembic/: env.py
apps/api/app/: config.py  database.py  logging_config.py  main.py
apps/api/migrations/: 001_init_schema.sql  002_upgrade_multi_file.sql  003_upgrade_file_size_bigint.sql  004_add_model_versions.sql  005_add_must_change_password.sql
apps/api/scripts/: check_queue.py  check_worker_health.py  create_admin.py  e2e_validation.py  m1_evidence_test.py  m1_evidence_test_v2.py  migrate_db.py  queue_governance.py  rc_smoke.py  regression_check.py  update_admin_password.py  verify_multi_file.py  verify_split.py  wait_queue_empty.py
apps/api/src/: context.ts  index.ts
apps/api/tests/: conftest.py  test_auth.py  test_benchmark.py  test_cors.py  test_data_quality.py  test_datasets.py  test_db_helper.py  test_e2e_queue_health_check.py  test_e2e_validation_regression.py  test_early_stopping.py  test_experiments.py  test_export.py  test_feature_engineering_validation.py  test_health.py  test_join.py  test_model_versions.py  test_new_endpoints.py  test_observability_regression.py  test_preprocessing.py  test_queue.py  test_queue_health_check.py  test_results.py  test_results_contract.py  test_storage.py  (+7 more)
(+456 files in other folders)
